AudioTutorial/adventures_with_ip/.metadata/.plugins/org.eclipse.cdt.ui/adventures_with_ip.build.log
19:14:01 **** Incremental Build of configuration Debug for project adventures_with_ip ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/adventures_with_ip.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/adventures_with_ip.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/Users/cjw18/Desktop/ensc-452/AudioTutorial/adventures_with_ip/adventures_with_ip_design_wrapper/export/adventures_with_ip_design_wrapper/sw/adventures_with_ip_design_wrapper/standalone_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/adventures_with_ip.d" -MT"src/adventures_with_ip.o" -o "src/adventures_with_ip.o" "../src/adventures_with_ip.c"
In file included from ../src/adventures_with_ip.c:6:
../src/adventures_with_ip.h:64:1: error: unknown type name 'XScuGic'
   64 | XScuGic INTCInst;  // Interrupt Controller instance
      | ^~~~~~~
../src/adventures_with_ip.h:66:12: warning: 'btn_value' defined but not used [-Wunused-variable]
   66 | static int btn_value;
      |            ^~~~~~~~~
../src/adventures_with_ip.h:65:12: warning: 'recordStatus' defined but not used [-Wunused-variable]
   65 | static int recordStatus;
      |            ^~~~~~~~~~~~
make[1]: *** [src/subdir.mk:29: src/adventures_with_ip.o] Error 1
make: *** [makefile:34: all] Error 2

19:14:02 Build Finished (took 850ms)

